--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "create-react-class": "^15.6.3",
     "css-loader": "^0.28.11",
